# arxiv-sanity-bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  pytest.ini  test_twitter_thread.py
.github/workflows/: debug.yml  run-arxiv-sanity-bot.yml  run_tests.yml  send-test-tweet.yml  submit_coverage.yml  test-twitter-threading.yml
arxiv_sanity_bot/: bulk_download.py  config.py  events.py  logger.py  sanitize_text.py  schemas.py
arxiv_sanity_bot/altmetric/: scores.py
arxiv_sanity_bot/arxiv/: arxiv_abstracts.py  extract_graph.py  extract_image.py  image_validation.py
arxiv_sanity_bot/arxiv_sanity/: abstracts.py  arxiv_sanity_abstracts.py
arxiv_sanity_bot/cli/: arxiv_sanity_bot.py
arxiv_sanity_bot/models/: chatGPT.py  model.py  openai.py
arxiv_sanity_bot/ranking/: __init__.py  ranked_papers.py
arxiv_sanity_bot/store/: store.py
arxiv_sanity_bot/twitter/: auth.py  send_tweet.py
ci/: run_tests.sh  send_test_tweet.py
tests/: test_arxiv.py  test_arxiv_sanity.py  test_chatgpt.py  test_events.py  test_extract_image.py  test_image_validation.py  test_logger.py  test_openai.py  test_ranked_papers.py  test_scores.py  test_store.py  test_twitter_auth.py
tests/resources/: fake_private_key.pem
