[project]
name = "arxiv_sanity_bot"
version = "1.0.0"
description = "A bot that reads papers from arxiv-sanity, summarizes them using ChatGPT and post them on Twitter"
readme = "README.md"
authors = [{"name" = "Giacomo Vianello"}]
dependencies = [
    "openai == 0.27.2",
    "tweepy == 4.13.0",
    "pyshorteners == 1.0.1",
    "requests-html == 0.10.0",
    "pyyaml == 6.0",
    "pandas == 2.0.0",
    "httpx == 0.24.0",
    "click == 8.1.3",
    "arxiv == 1.4.5",
    "pypdf[image] == 3.8.0",
    "PyMuPDF == 1.22.1",
    "firebase == 4.0.1",
    "firebase-admin == 6.1.0"
    ]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest==7.3.0",
    "coverage==7.2.2",
    "pytest-asyncio==0.21.0",
    "pytest-cov==4.0.0",
    "mock-firestore == 0.11.0"
]

#[options.entry_points]
#console_scripts = [
#    "arxiv-sanity-bot = arxiv_sanity_bot.cli.arxiv_sanity_bot:bot",
#]

[project.scripts]
arxiv-sanity-bot = "arxiv_sanity_bot.cli.arxiv_sanity_bot:bot"

