[project]
name = "arxiv_sanity_bot"
version = "1.0.0"
description = "A bot that reads papers from arxiv-sanity, summarizes them using ChatGPT and post them on Twitter"
readme = "README.md"
authors = [{"name" = "Giacomo Vianello"}]
requires-python = ">=3.12"
dependencies = [
    "openai",
    "tweepy",
    "pyshorteners",
    "lxml[html_clean]",
    "requests-html",
    "pyyaml",
    "pandas",
    "httpx",
    "click",
    "arxiv",
    "pypdf[image]",
    "PyMuPDF",
    "firebase",
    "firebase-admin",
    "atoma",
    "numpy",
    "python-dotenv",
    ]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-asyncio",
    "pytest-cov",
    "mock-firestore",
    "freezegun"
]

#[options.entry_points]
#console_scripts = [
#    "arxiv-sanity-bot = arxiv_sanity_bot.cli.arxiv_sanity_bot:bot",
#]

[project.scripts]
arxiv-sanity-bot = "arxiv_sanity_bot.cli.arxiv_sanity_bot:bot"

